[tool.poetry]
name = "http"
version = "0.1.0"
description = ""
authors = ["Vasily Kovalev <poiut_2001@mail.ru>"]

[tool.poetry.dependencies]
python = "^3.9"
requests = "^2.28.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
